sumo/tests/duarouter/flows/errors/vehicle_empty_arrivallane/errors.duarouter
Error: The loader for flows from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid arrivallane definition for vehicle 0.
Quitting (on error).
